footer spacing fixed.

--- a/app/src/sass/footer.scss
+++ b/app/src/sass/footer.scss
@@ -13,12 +13,13 @@ footer {
         display: flex;
         justify-content:space-around;
 
+        
         .container-1 {
             display: flex;
             justify-content: flex-start;
         }
         .foot-products {
-            min-width: 210px;
+            min-width: 250px;
             ul {
                 padding-left: 0;
             }
@@ -38,6 +39,7 @@ footer {
             }
         }
         .foot-contact {
+            min-width: 250px;
             max-width: 250px;
             font-size: $normal;
 
@@ -75,27 +77,19 @@ footer {
         .container-2 {
             color: $copy-background;
             align-self: center;
+            width: 20%;
 
             img {
                 border: 2px solid $copy-background;
+                max-width: 100%;
                 border-radius: 3px;
                 transition-duration: 300ms;
                 margin-top: 5px;
             }
             
             
-            @include screen-size(mobile) {
-                //display: none;
-                img {
-                    max-width: 75%;
-                }
-           }
-           @include screen-size(med) {
-                //display: none;
-                img {
-                    max-width: 50%;
-                }
-           }
+           
+           
         }
     }
     .copyright {
@@ -118,9 +112,10 @@ footer {
         padding-top: 5px;
 
         .foot-info {
-            height: 400px;
+            height: 560px;
             flex-direction: column;
             justify-content: center;
+            align-items: center;
     
             .foot-contact,
             .foot-products {
@@ -129,13 +124,14 @@ footer {
 
                 a { margin-left: 0; }
             }
+            .container-2 {
+                width: 250px;
+            }
         }
     }
     
     @include screen-size(mobile) {
-        .foot-info {
-            justify-content: space-between;
-        }
+        
         .foot-contact {
             margin-left: 0px;
         }
